--- a/Onyx-Editor/src/OnyxEditor/UI/EmbeddedWindow.xaml
+++ b/Onyx-Editor/src/OnyxEditor/UI/EmbeddedWindow.xaml
@@ -6,6 +6,6 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <StackPanel x:Name="AppContainer" Background="Green">
+    <StackPanel x:Name="AppContainer" Background="#ff333333">
     </StackPanel>
 </UserControl>
